--- a/content/resources/14-731f06-th.md
+++ b/content/resources/14-731f06-th.md
@@ -12,10 +12,9 @@ image_metadata:
   caption: "\"A picturesque view of the state of the nation for February 1778.\" This\
     \ political cartoon features characters representing America, Britain, the Netherlands,\
     \ France, and Spain.\_ It satirizes the economic relations among the states. (Image\
-    \ courtesy of {{% resource_link \"a62bb474-7030-44bd-b2a6-e86f805ff40e\" \"Library\
-    \ of Congress, Prints and Photographs Division\" %}} \\[reproduction number LC-USZ62-39591\
-    \ (b&w film copy neg.)\\]. Originally published in _Westminster Magazine_ 6 (March\
-    \ 1, 1778): 66.)"
+    \ courtesy of [Library of Congress, Prints and Photographs Division](http://www.loc.gov/rr/print/)\
+    \ \\[reproduction number LC-USZ62-39591 (b&w film copy neg.)\\]. Originally published\
+    \ in _Westminster Magazine_ 6 (March 1, 1778): 66.)"
   credit: ''
   image-alt: Political cartoon depicting 18th century Euro-American economic relations.
 learning_resource_types: []
